fix: Changed overflow style only to table

--- a/src/style.css
+++ b/src/style.css
@@ -246,12 +246,15 @@ header {
 #transaction {
     display:block;
     width: 100%;
-    overflow-x: auto;
 }
 
 #data-table {
     width: 100%;
     border-spacing: 0 0.5rem;
+}
+
+.scrollable-table {
+    overflow-x: auto;
 }
 
 table thead tr th:first-child,
